--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 			<p>Web前端开发工程师</p>
 			<div class="user-img">
 				<img src="img/crown.png" alt="王冠" class="crown">
-				<img src="img/user.jpg" alt="我的头像" class="my-pic">
+				<img src="http://www.pig66.com/uploadfile/2017/0509/20170509094020407.jpg" alt="我的头像" class="my-pic">
 			</div>
 			<ul class="fa-ul user-info">
-				<li><i class="fa-li fa fa-user-o fa-lg"></i>刘亚男</li>
-				<li><i class="fa-li fa fa-phone fa-lg"></i>18811485399</li>
-				<li><i class="fa-li fa fa-envelope-o fa-lg"></i>18811485399@163.com</li>
+				<li><i class="fa-li fa fa-user-o fa-lg"></i>Lynn</li>
+				<li><i class="fa-li fa fa-phone fa-lg"></i>188xxxx5399</li>
+				<li><i class="fa-li fa fa-envelope-o fa-lg"></i>1881xxxx5399@163.com</li>
 				<li><i class="fa-li fa fa-flag-o fa-lg"></i>https://gentlelynn.github.io</li>
 			</ul>
 		</div>	
@@ -42,7 +42,7 @@
 			<ul class="job-info fa-ul">
 				<li><i class="fa-li fa fa-clock-o fa-lg"></i>全职</li>
 				<li><i class="fa-li fa fa-map-marker fa-lg"></i>北京</li>
-				<li><i class="fa-li fa fa-rmb fa-lg"></i>期望薪资8-15k</li>
+				<li><i class="fa-li fa fa-rmb fa-lg"></i>期望薪资9-15k</li>
 				<li><i class="fa-li fa fa-calendar fa-lg"></i>立即到岗</li>
 			</ul>
 			<div class="school">
@@ -331,7 +331,7 @@
 			<p class="pointer"><img src="img/point.gif" alt="点我"></p>
 			<p class="code"><img src="img/code.png" alt="二维码"></p>
 		</div>	
-		<div id="imageFlow" class="section">
+		<!-- <div id="imageFlow" class="section">
 			<div class="bank">
 				<a href="#" target="_blank" rel="img/13.png">2013年入学座右铭</a>
 				<a href="#" target="_blank" rel="img/8.jpg">2014年西南大学校运会广播操寝室合影</a>
@@ -360,7 +360,7 @@
 				<img class="arrow-right" src="img/sr.gif" alt=""> 
 				<img class="bar" src="img/sc.gif" alt=""> 
  			</div>
-		</div>
+		</div> -->
 		
 	</div>
 	<script src="js/jquery.mobile.custom.min.js"></script>
